--- a/.github/workflows/generator-linux.yml
+++ b/.github/workflows/generator-linux.yml
@@ -103,7 +103,7 @@ jobs:
               arch: x86_64,
               target: x86_64-unknown-linux-gnu,
               distro: ubuntu18.04,
-              on: ubuntu-20.04,
+              on: [self-hosted, Linux],
               deb_arch: amd64,
               vcpkg-triplet: x64-linux,
             }
