--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
+        with:
+          repository: rustdesk/rustdesk
 
       - name: Install prerequisites
         run: |
