--- a/.github/workflows/generator-linux.yml
+++ b/.github/workflows/generator-linux.yml
@@ -266,11 +266,6 @@ jobs:
         run: |
           sed -i -e '/if !key.is_empty() && !token.is_empty() {/,/}/d' ./src/client.rs
 
-      - name: replace flutter icons
-        run: |
-          cd ./flutter
-          flutter pub run flutter_launcher_icons
-          cd ..
 
       - name: Restore bridge files
         if: matrix.job.arch == 'x86_64' || env.UPLOAD_ARTIFACT == 'true'
@@ -419,6 +414,9 @@ jobs:
             chmod 777 output -R
             export CARGO_INCREMENTAL=0
             export DEB_ARCH=${{ matrix.job.deb_arch }}
+            pushd ./flutter
+            flutter pub run flutter_launcher_icons
+            popd
             python3 ./build.py --flutter --skip-cargo
             for name in rustdesk*??.deb; do
               mv "$name" /workspace/output/"${{ inputs.filename }}-${{ matrix.job.arch }}.deb"
