--- a/.github/workflows/generator-windows.yml
+++ b/.github/workflows/generator-windows.yml
@@ -135,6 +135,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
+          ref: tags/1.3.1
 
       # - name: Install LLVM and Clang
       #   uses: KyleMayes/install-llvm-action@v1
