--- a/.github/workflows/generator-linux.yml
+++ b/.github/workflows/generator-linux.yml
@@ -422,6 +422,7 @@ jobs:
             export CARGO_INCREMENTAL=0
             export DEB_ARCH=${{ matrix.job.deb_arch }}
             echo "$(ls)"
+            echo -n "${{ env.CUSTOM }}" | cat > ./rustdesk/custom.txt
             echo "${{ inputs.logobase64 }}" | base64 -d > ./rustdesk/data/flutter_assets/assets/logo.png
             mv ./rustdesk/data/flutter_assets/assets/icon.svg ./rustdesk/data/flutter_assets/assets/icon.svg.bak
             convert ./res/icon.png ./rustdesk/data/flutter_assets/assets/icon.svg
