--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -4,6 +4,12 @@ name: Build flutter-rust-bridge
 
 on:
   workflow_call:
+    inputs:
+      version:
+        description: 'Rustdesk Version'
+        required: true
+        default: '1.3.1'
+        type: string
 
 env:
   FLUTTER_VERSION: "3.19.6"
@@ -27,6 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
+          ref: refs/tags/${{ inputs.version }}
 
       - name: Install prerequisites
         run: |
