--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -28,15 +28,15 @@ on:
         required: true
         default: ''
         type: string
-      iconbase64:
-        description: "icon in base64"
+      iconlink:
+        description: "icon link"
         required: false
-        default: ''
+        default: 'false'
         type: string
-      logobase64:
-        description: "logo in base64"
+      logolink:
+        description: "logo link"
         required: false
-        default: ''
+        default: 'false'
         type: string
       appname:
         description: "app name"
@@ -71,7 +71,7 @@ env:
   VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
   # vcpkg version: 2024.07.12
   VCPKG_COMMIT_ID: "1de2026f28ead93ff1773e6e680387643e914ea1"
-  VERSION: "1.3.1"
+  VERSION: "${{ fromJson(inputs.extras).version }}"
   NDK_VERSION: "r27"
   #signing keys env variable checks
   ANDROID_SIGNING_KEY: "${{ secrets.ANDROID_SIGNING_KEY }}"
@@ -94,7 +94,7 @@ jobs:
   build-rustdesk-android:
     needs: [generate-bridge-linux]
     name: build rustdesk android apk ${{ matrix.job.target }}
-    runs-on: [self-hosted, linux]
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
@@ -121,16 +121,16 @@ jobs:
           #     suffix: "",
           #   }
     steps:
-      # - name: Free Disk Space (Ubuntu)
-      #   uses: jlumbroso/free-disk-space@main
-      #   with:
-      #     tool-cache: false
-      #     android: false
-      #     dotnet: true
-      #     haskell: true
-      #     large-packages: false
-      #     docker-images: true
-      #     swap-storage: false
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: false
+          dotnet: true
+          haskell: true
+          large-packages: false
+          docker-images: true
+          swap-storage: false
 
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
@@ -139,52 +139,53 @@ jobs:
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-      # - name: Install dependencies
-      #   run: |
-      #     echo ${{ secrets.SUDOPW }} | sudo -S apt-get update
-      #     echo ${{ secrets.SUDOPW }} | sudo -S apt-get install -y \
-      #          clang \
-      #          cmake \
-      #          curl \
-      #          gcc-multilib \
-      #          git \
-      #          g++ \
-      #          g++-multilib \
-      #          imagemagick \
-      #          libappindicator3-dev \
-      #          libasound2-dev \
-      #          libc6-dev \
-      #          libclang-10-dev \
-      #          libgstreamer1.0-dev \
-      #          libgstreamer-plugins-base1.0-dev \
-      #          libgtk-3-dev \
-      #          libpam0g-dev \
-      #          libpulse-dev \
-      #          libva-dev \
-      #          libvdpau-dev \
-      #          libxcb-randr0-dev \
-      #          libxcb-shape0-dev \
-      #          libxcb-xfixes0-dev \
-      #          libxdo-dev \
-      #          libxfixes-dev \
-      #          llvm-10-dev \
-      #          nasm \
-      #          ninja-build \
-      #          openjdk-11-jdk-headless \
-      #          pkg-config \
-      #          tree \
-      #          wget
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+               clang \
+               cmake \
+               curl \
+               gcc-multilib \
+               git \
+               g++ \
+               g++-multilib \
+               imagemagick \
+               libappindicator3-dev \
+               libasound2-dev \
+               libc6-dev \
+               libclang-10-dev \
+               libgstreamer1.0-dev \
+               libgstreamer-plugins-base1.0-dev \
+               libgtk-3-dev \
+               libpam0g-dev \
+               libpulse-dev \
+               libva-dev \
+               libvdpau-dev \
+               libxcb-randr0-dev \
+               libxcb-shape0-dev \
+               libxcb-xfixes0-dev \
+               libxdo-dev \
+               libxfixes-dev \
+               llvm-10-dev \
+               nasm \
+               ninja-build \
+               openjdk-11-jdk-headless \
+               pkg-config \
+               tree \
+               wget
 
       - name: Checkout source code
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
+          ref: refs/tags/${{ env.VERSION }}
 
-      # - name: Install flutter
-      #   uses: subosito/flutter-action@v2
-      #   with:
-      #     channel: "stable"
-      #     flutter-version: ${{ env.ANDROID_FLUTTER_VERSION }}
+      - name: Install flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+          flutter-version: ${{ env.ANDROID_FLUTTER_VERSION }}
 
       - uses: nttld/setup-ndk@v1
         id: setup-ndk
@@ -192,40 +193,40 @@ jobs:
           ndk-version: ${{ env.NDK_VERSION }}
           add-to-path: true
 
-      # - name: Setup vcpkg with Github Actions binary cache
-      #   uses: lukka/run-vcpkg@v11
-      #   with:
-      #     vcpkgDirectory: /opt/artifacts/vcpkg
-      #     vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
-      #     doNotCache: false
+      - name: Setup vcpkg with Github Actions binary cache
+        uses: lukka/run-vcpkg@v11
+        with:
+          vcpkgDirectory: /opt/artifacts/vcpkg
+          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+          doNotCache: false
 
-      # - name: Install vcpkg dependencies
-      #   run: |
-      #     #case ${{ matrix.job.target }} in
-      #     #  aarch64-linux-android)
-      #     ANDROID_TARGET=arm64-v8a
-      #     #  ;;
-      #     #   armv7-linux-androideabi)
-      #     #     ANDROID_TARGET=armeabi-v7a
-      #     #   ;;
-      #     #   x86_64-linux-android)
-      #     #     ANDROID_TARGET=x86_64
-      #     #   ;;
-      #     #   i686-linux-android)
-      #     #     ANDROID_TARGET=x86
-      #     #   ;;
-      #     # esac
-      #     if ! ./flutter/build_android_deps.sh "${ANDROID_TARGET}"; then
-      #       find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
-      #         echo "$_1:"
-      #         echo "======"
-      #         cat "$_1"
-      #         echo "======"
-      #         echo ""
-      #       done
-      #       exit 1
-      #     fi
-      #   shell: bash
+      - name: Install vcpkg dependencies
+        run: |
+          #case ${{ matrix.job.target }} in
+          #  aarch64-linux-android)
+          ANDROID_TARGET=arm64-v8a
+          #  ;;
+          #   armv7-linux-androideabi)
+          #     ANDROID_TARGET=armeabi-v7a
+          #   ;;
+          #   x86_64-linux-android)
+          #     ANDROID_TARGET=x86_64
+          #   ;;
+          #   i686-linux-android)
+          #     ANDROID_TARGET=x86
+          #   ;;
+          # esac
+          if ! ./flutter/build_android_deps.sh "${ANDROID_TARGET}"; then
+            find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
+              echo "$_1:"
+              echo "======"
+              cat "$_1"
+              echo "======"
+              echo ""
+            done
+            exit 1
+          fi
+        shell: bash
 
       - name: Restore bridge files
         uses: actions/download-artifact@master
@@ -233,16 +234,16 @@ jobs:
           name: bridge-artifact
           path: ./
 
-      # - name: Install Rust toolchain
-      #   uses: dtolnay/rust-toolchain@v1
-      #   with:
-      #     toolchain: ${{ env.RUST_VERSION }}
-      #     components: "rustfmt"
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_VERSION }}
+          components: "rustfmt"
 
-      # - uses: Swatinem/rust-cache@v2
-      #   with:
-      #     prefix-key: rustdesk-lib-cache-android # TODO: drop '-android' part after caches are invalidated
-      #     key: ${{ matrix.job.target }}
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: rustdesk-lib-cache-android # TODO: drop '-android' part after caches are invalidated
+          key: ${{ matrix.job.target }}
 
       - name: fix android for flutter 3.13
         if: $${{ env.ANDROID_FLUTTER_VERSION == '3.13.9' }}
