--- a/.github/workflows/generator-linux.yml
+++ b/.github/workflows/generator-linux.yml
@@ -277,6 +277,7 @@ jobs:
           sed -i -e 's|rustdesk|${{ inputs.appname }}|' ./flutter/linux/my_application.cc
           #sed -i -e 's|Package: rustdesk|Package: ${{ inputs.appname }}|' ./build.py
           sed -i -e 's|Homepage: https://rustdesk.com|Homepage: ${{ fromJson(inputs.extras).urlLink }}|' ./build.py
+          sed -i "\system2('mkdir -p tmpdeb/usr/lib/rustdesk')\a system2('echo {binary_folder}')\" ./build.py
           sed -i "\system2('mkdir -p tmpdeb/usr/lib/rustdesk')\a system2('echo -n '${{ env.CUSTOM }}' | cat > ./tmpdeb/usr/lib/rustdesk/custom.txt')\" ./build.py
           sed -i -e 's|set(BINARY_NAME "rustdesk")|set(BINARY_NAME "${{ inputs.appname }}")|' ./flutter/linux/CMakeLists.txt
           cp ./src/lang/en.rs ./src/lang/en.rs.bak
@@ -467,10 +468,10 @@ jobs:
               mv ./flutter/assets/icon.svg ./flutter/assets/icon.svg.bak
               convert ./res/icon.png ./flutter/assets/icon.svg
               convert ./res/128x128.png -resize 200% ./flutter/assets/128x128@2x.png
+              convert ./res/icon.png ./res/scalable.svg
               pushd ./flutter
               flutter pub run flutter_launcher_icons
               popd
-              convert ./res/icon.png ./flutter/assets/scalable.svg
             fi
             python3 ./build.py --flutter --skip-cargo
             for name in rustdesk*??.deb; do
