--- a/.github/workflows/generator-linux.yml
+++ b/.github/workflows/generator-linux.yml
@@ -277,6 +277,7 @@ jobs:
           sed -i -e 's|rustdesk|${{ inputs.appname }}|' ./flutter/linux/my_application.cc
           #sed -i -e 's|Package: rustdesk|Package: ${{ inputs.appname }}|' ./build.py
           sed -i -e 's|Homepage: https://rustdesk.com|Homepage: ${{ fromJson(inputs.extras).urlLink }}|' ./build.py
+          sed -i -e 's*-p tmpdeb/usr/lib/rustdesk*-p tmpdeb/usr/lib/rustdesk || true*' ./build.py
           sed -i -e 's|set(BINARY_NAME "rustdesk")|set(BINARY_NAME "${{ inputs.appname }}")|' ./flutter/linux/CMakeLists.txt
           cp ./src/lang/en.rs ./src/lang/en.rs.bak
           sed -i -e 's|RustDesk|${{ inputs.appname }}|' ./src/lang/en.rs
@@ -456,9 +457,6 @@ jobs:
             chmod 777 output -R
             export CARGO_INCREMENTAL=0
             export DEB_ARCH=${{ matrix.job.deb_arch }}
-            #echo "$(ls)"
-            #mkdir -p ./flutter/build/linux/x64/release/bundle
-            #echo -n "${{ env.CUSTOM }}" | cat > ./flutter/build/linux/x64/release/bundle/custom.txt
             mkdir -p flutter/tmpdeb/usr/lib/rustdesk
             cp ./custom.txt ./flutter/tmpdeb/usr/lib/rustdesk/custom.txt
             if [[ "${{ inputs.logolink }}" != "false" ]]; then
